--- a/src/main/resources/public/cars.html
+++ b/src/main/resources/public/cars.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 
-<div class="dupxo">
-    <a href="index.html">dom</a>
-    <a href="cars.html">lista</a>
-    <a href="admin.html">admin</a>
-    <a href="search.html">search</a>
+<div class="navbar">
+    <a href="index.html">Home</a>
+    <a href="cars.html">List</a>
+    <a href="admin.html">Admin</a>
+    <a href="search.html">Search</a>
 </div>
 
     <div class="container">
@@ -21,16 +21,16 @@
                 <td>$index</td>
                 <td>$id</td>
                 <td>$name</td>
-                <td>$poduszki</td>
+                <td>$airbags</td>
                 <td>$year</td>
                 <td>$price</td>
                 <td>$vat</td>
                 <td class="color"></td>
                 <td>
-                    <button class="update-button">Aktualizuj</button>
+                    <button class="update-button">Update</button>
                 </td>
                 <td>
-                    <button class="delete-button">Usuń</button>
+                    <button class="delete-button">Delete</button>
                 </td>
             </tr>
         </table>
