--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -7,26 +7,26 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-<div class="dupxo">
-    <a href="index.html">dom</a>
-    <a href="cars.html">lista</a>
-    <a href="admin.html">admin</a>
-    <a href="search.html">search</a>
+<div class="navbar">
+    <a href="index.html">Home</a>
+    <a href="cars.html">List</a>
+    <a href="admin.html">Admin</a>
+    <a href="search.html">Search</a>
 </div>
 
     <h2>smark</h2>
     <div class="container">
         <div class="form2">
-            model: <br>
+            Model: <br>
             <input type="text" name="model" id="modelInput"><br>
             <div>Vat</div>
             <input type="text" name="vat" id="vat"><br>
-            <div>Cena</div>
+            <div>Price</div>
             <input type="text" name="price" id="price"><br>
-            rok: <br>
+            year: <br>
             <select name="year" id="year">
             </select><br>
-            poduszki powietrzne: kierowca | pasażer | tylna kanapa | boczne z tyłu :
+            Airbags: driver | passenger | rear | side :
             <input type="checkbox" name="dairbag" id="dairbag">
             <input type="checkbox" name="pairbag" id="pairbag">
             <input type="checkbox" name="bairbag" id="bairbag">
@@ -34,9 +34,9 @@
             <br>
             <input type="color" name="color" id="color">
             <br>
-            <input type="submit" value="dodaj" id="submit2">
+            <input type="submit" value="Add" id="submit2">
         </div>
-        <a href="cars.html">strona z danymi</a>
+        <a href="cars.html">Car list</a>
     </div>
 </body>
 </html>
